webpage first draft

--- a/index.html
+++ b/index.html
@@ -1,105 +1,220 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta name="title" content="Doradca podatkowy Zbigniew Adamiak">
-    <meta name="description" content="Strona główna doradcy podatkowego Zbigniewa Adamiaka, działającego na terenie województwa łódzkiego.">
-    <meta name="keywords" content="doradca podatkowy, podatki, Zbigniew Adamiak, Zduńska Wola, urząd skarbowy">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Karol Adamiak">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" ></script>
-  </head>
-  <body>
-    <div class="container-fluid" id="page">
-      <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use href="resources/kidp_logo_no_text.svg"></use></svg>
-            <h1 class="fs-4 text-muted"> Doradca Podatkowy Zbigniew Adamiak</h1>
-          </a>
 
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#home" class="nav-link active">Strona główna</a></li>
-            <li class="nav-item"><a href="#about" class="nav-link">O kancelarii</a></li>
-            <li class="nav-item"><a href="#rights" class="nav-link">Poznaj swoje prawa</a></li>
-            <li class="nav-item"><a href="#contact" class="nav-link">Kontakt</a></li>
-            <li class="nav-item"><a href="#map" class="nav-link">Wskazówki dojazdu</a></li>
-          </ul>
-        </header>
+<head>
+  <title>Doradca Podatkowy Zbigniew Adamiak</title>
+  <meta name="title" content="Doradca Podatkowy Zbigniew Adamiak">
+  <meta name="description"
+    content="Strona główna doradcy podatkowego Zbigniewa Adamiaka, działającego na terenie województwa łódzkiego.">
+  <meta name="keywords" content="doradca podatkowy, podatki, Zbigniew Adamiak, Zduńska Wola, urząd skarbowy">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Karol Adamiak">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" type="image/svg+xml" href="assets/kidp_logo_blue_no_text.svg">
+</head>
+
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-light border-bottom border-3">
+    <div class="container-xxl">
+      <a class="navbar-brand overflow-hidden" href="#">
+        <img src="/assets/kidp_logo_blue_no_text.svg" alt="" width="30" height="24"
+          class="d-inline-block align-text-top">
+        <span class="text-black-50">Doradca Podatkowy Zbigniew Adamiak</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
+        aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="#home">Strona główna</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">O kancelarii</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#rights">Poznaj swoje prawa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Kontakt</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#map">Wskazówki dojazdu</a>
+          </li>
+        </ul>
       </div>
-    <h2 id="home"> Witamy na stronie </h2>
-      <h3> Misja </h3>
-        <p>Naszą misją jest cywilizowanie postępowania podatkowego, odstresowanie podatników i przekonanie organów procesu, iż art. 6 KC nie powinien mieć zastosowania w prawie podatkowym.</p>
-      <h3>Realizowanie usług</h3>
-        <p>Usługi realizowane są w ramach stałych umów lub w przypadku pojedynczych postępowań i kontroli podatkowych.</p>
-      <h3>Prowadzenie księgowości</h3>
+    </div>
+  </nav>
+
+  <div class="container-lg my-5">
+    <h2 id="home" class="text-center mb-2 pb-2 border-bottom"> Witamy na stronie </h2>
+    <div class="row">
+
+      <div class="col-sm-12 col-md-4 mb-2">
+        <h3> Misja </h3>
+        <img src="assets/stressed.png" alt="stressed person" class="img-fluid rounded border shadow my-3">
+        <p>Naszą misją jest cywilizowanie postępowania podatkowego, odstresowanie podatników i przekonanie organów
+          procesu, iż art. 6 KC nie powinien mieć zastosowania w prawie podatkowym.
+          <blockquote class="border-start ps-2 fst-italic"> <span class="fw-bold d-block">Art. 6. [Onus probandi]</span>
+            Ciężar udowodnienia faktu spoczywa na osobie, która z faktu tego wywodzi skutki prawne.</blockquote>
+        </p>
+
+      </div>
+      <div class="col-sm-12 col-md-4">
+        <h3>Realizowanie usług</h3>
+        <img src="assets/business.png" alt="contract signing" class="img-fluid rounded border shadow my-3">
+        <p>Usługi realizowane są w ramach stałych umów lub w przypadku pojedynczych postępowań i kontroli podatkowych.
+        </p>
+
+      </div>
+      <div class="col-sm-12 col-md-4">
+        <h3>Prowadzenie księgowości</h3>
+        <img src="assets/financial.jpg" alt="financial support" class="img-fluid rounded border shadow my-3">
         <p>Kancelaria świadczy również stałe usługi w zakresie prowadzenia ksiąg rachunkowych i podatkowych.</p>
-    <h2 id="about"> O kancelarii </h2>
-      <p>Kancelaria ma wieloletnie doświadczenie w pomaganiu Podatnikom podczas sporu z organami podatkowymi. Realizuje swoje usługi w ramach umów stałych lub dotyczących konkretnego postępowania. Obejmują one:</p>
-        <ul>
-          <li>porady, opinie i wyjaśnienia z zakresu obowiązków podatkowych;</li>
-          <li>porady prawne z zakresu prawa pracy;</li>
-          <li>audyt podatkowy;</li>
-          <li>rejestrację działalności gospodarczej, w tym również spółek prawa handlowego;</li>
-          <li>reprezentowanie Podatnika przez wszystkimi organami podatkowymi oraz zastępstwa procesowe;</li>
-          <li>prowadzenie ksiąg rachunkowych i podatkowych;</li>
-          <li>reprezentowanie Podatnika w postępowaniu egzekucyjnym, starając się by było ono jak najmniej dotkliwe;</li>
-          <li>reprezentowanie Podatnika w postępowaniach dotyczących nieujawnionych źródeł dochodu lub nieujawnionych dochodów w ujawnionych źródłach.</li>
-        </ul>
-        <p>Kancelaria może zająć się również inną, choćby najbardziej nietypową sprawą. Zachęcamy do kontaktu.</p>
-      <h3> Potwierdzenie wpisu </h3>
-        <img src="resources/adamiak_b-1.jpg" alt="potwierdzenie wpisu na listę doradców podatkowych">
-    <h2 id="rights"> Poznaj swoje prawa </h2>
-        <p>Czy wiesz, że:</p>
-        <ul>
-          <li>Jeżeli w trakcie postępowania podatkowego (kontroli podatkowej) jesteś wzywany na przesłuchanie w charakterze strony, to możesz nie wyrazić zgody na to przesłuchanie, gdyby przykładowo miało ono pogorszyć Twoją sytuację podatkową?</li>
-          <li>Nie musisz sporządzać jakichkolwiek dodatkowych zestawień w trakcie kontroli? Jeżeli są one potrzebne organowi, to jest on zobowiązany sporządzić je sam na podstawie przedłożonych przez Ciebie dokumentów i ewidencji. Nie daj się zastraszyć groźbą potencjalnej kary pieniężnej.</li>
-          <li>Jeśli z jakichś powodów upłynął termin do złożenia przez Ciebie odwołania od niekorzystnej decyzji podatkowej, to są jeszcze inne instytucje procesowe aby ją uchylić? Przykładem może być stwierdzenie nieważności.</li>
-        </ul>
-    <h2 id="contact"> Kontakt </h2>
-      <div class="container-fluid d-flex flex-column">
-
-        <p>Kancelaria Doradcy Podatkowego</p>
-        <p>Zbigniew Adamiak</p>
-        <p>ul. Królewska 19</p>
-        <p>98-220 Zduńska Wola</p>
-
-        <p>telefon: 043 659 19 11</p>
-        <p>telefon: <a href="tel:502647868">502 647 868</a></p>
-        <p>telefon: 606 115 550</p>
-        <p>fax: 042 298 06 48</p>
-        <p>fax: 043 650 20 62</p>
-
-        <p>e-mail: adamiakz@si.onet.pl</p>
-        <p>e-mail: adamiak@adamiak.biz</p>
-
-        <p>Adres do doręczeń: skrytka pocztowa 78, 98-220 Zduńska Wola 1</p>
-        <p>Kancelaria jest czynna od poniedziałku do piątku w godzinach 8.00 – 16.00</p>
       </div>
-    <h2 id="map"> Wskazówki dojazdu </h2>
-        <strong>Adres kancelarii</strong>
-        <p>Doradca Podatkowy</p>
-        <p>Zbigniew Adamiak</p>
-        <p>Nr wpisu 00148</p>
-        <p>ul. Królewska 19</p>
-        <p>98-220 Zduńska Wola</p>
-        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d619.5353993849519!2d18.94071608752008!3d51.60229406833801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471a5b77d6ba96c1%3A0xcf60a36cb1370f89!2sKr%C3%B3lewska%2C%2098-220%20Zdu%C5%84ska%20Wola!5e0!3m2!1spl!2spl!4v1637003926117!5m2!1spl!2spl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        -->
-          <iframe sandbox="allow-scripts" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d2478.1257576028593!2d18.938411115942674!3d51.60258431155988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!3e2!4m0!4m4!1s0x471a5b77d69db8d3%3A0xa973bd54b6b98ce7!3m2!1d51.602581!2d18.940599799999998!5e0!3m2!1spl!2spl!4v1558529277864!5m2!1spl!2spl" width="600" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
-    <!-- Footer -->
-    <div class="container">
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Polityka Prywatności</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Polityka Cookies</a></li>
-      </ul>
-      <p class="text-center text-muted">&copy; Copyright 2021, Karol Adamiak</p>
+    </div>
+  </div>
+  <div class="container-lg my-5">
+    <h2 id="about" class="text-center mb-2 pb-2 border-bottom"> O kancelarii </h2>
+    <p>Kancelaria ma wieloletnie doświadczenie w pomaganiu Podatnikom podczas sporu z organami podatkowymi. Realizuje
+      swoje usługi w ramach umów stałych lub dotyczących konkretnego postępowania. Obejmują one:</p>
+    <ul>
+      <li>porady, opinie i wyjaśnienia z zakresu obowiązków podatkowych;</li>
+      <li>porady prawne z zakresu prawa pracy;</li>
+      <li>audyt podatkowy;</li>
+      <li>rejestrację działalności gospodarczej, w tym również spółek prawa handlowego;</li>
+      <li>reprezentowanie Podatnika przez wszystkimi organami podatkowymi oraz zastępstwa procesowe;</li>
+      <li>prowadzenie ksiąg rachunkowych i podatkowych;</li>
+      <li>reprezentowanie Podatnika w postępowaniu egzekucyjnym, starając się by było ono jak najmniej dotkliwe;</li>
+      <li>reprezentowanie Podatnika w postępowaniach dotyczących nieujawnionych źródeł dochodu lub nieujawnionych
+        dochodów w ujawnionych źródłach.</li>
+    </ul>
+    <p>Kancelaria może zająć się również inną, choćby najbardziej nietypową sprawą. Zachęcamy do kontaktu.</p>
+    <h3 class="text-center"> Potwierdzenie wpisu </h3>
+    <div class="row justify-content-center">
+      <div class="col-sm-10 col-lg-6">
+        <img src="assets/adamiak_b-1.jpg" alt="potwierdzenie wpisu na listę doradców podatkowych" class="img-fluid">
+      </div>
+    </div>
+  </div>
+  <div class="container-lg my-5">
+    <h2 id="rights" class="text-center mb-2 pb-2 border-bottom"> Poznaj swoje prawa </h2>
+    <p>Czy wiesz, że:</p>
+    <ul>
+      <li>Jeżeli w trakcie postępowania podatkowego (kontroli podatkowej) jesteś wzywany na przesłuchanie w
+        charakterze strony, to możesz nie wyrazić zgody na to przesłuchanie, gdyby przykładowo miało ono pogorszyć
+        Twoją sytuację podatkową?</li>
+      <li>Nie musisz sporządzać jakichkolwiek dodatkowych zestawień w trakcie kontroli? Jeżeli są one potrzebne
+        organowi, to jest on zobowiązany sporządzić je sam na podstawie przedłożonych przez Ciebie dokumentów i
+        ewidencji. Nie daj się zastraszyć groźbą potencjalnej kary pieniężnej.</li>
+      <li>Jeśli z jakichś powodów upłynął termin do złożenia przez Ciebie odwołania od niekorzystnej decyzji
+        podatkowej, to są jeszcze inne instytucje procesowe aby ją uchylić? Przykładem może być stwierdzenie
+        nieważności.</li>
+    </ul>
+    <div class="container my-5 px-10 mx-10">
+      <div class="row justify-content-center">
+        <div class="col-sm-10 col-lg-6">
+          <img src="assets/businessman.png" alt="do you know" class="img-fluid rounded border shadow my-3">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-lg my-5">
+    <h2 id="contact" class="text-center mb-2 pb-2 border-bottom"> Kontakt </h2>
+    <div class="row my-2">
+      <div class="col-sm-12 col-lg-4">
+        <p class="my-1 fw-bolder">Kancelaria Doradcy Podatkowego</p>
+        <p class="my-0"> Zbigniew Adamiak</p>
+        <p class="my-0"> ul. Królewska 19</p>
+        <p class="my-0"> 98-220 Zduńska Wola</p>
+      </div>
+      <div class="col-sm-12 col-lg-4">
+        <p class="my-0">telefon: <a href="tel:0436591911">043 659 19 11</a></p>
+        <p class="my-0">telefon: <a href="tel:502647868">502 647 868</a></p>
+        <p class="my-0">telefon: <a href="tel:606115550">606 115 550</a></p>
+        <p class="my-0">fax: <a href="fax:0422980648">042 298 06 48</a></p>
+        <p class="my-0">fax: <a href="fax:0436502062">043 650 20 62</a></p>
+      </div>
+      <div class="col-sm-12 col-lg-4">
+        <p class="my-0">e-mail: <a href="mailto:adamiakz@si.onet.pl">adamiakz@si.onet.pl</a></p>
+        <p class="my-0">e-mail: <a href="mailto:adamiak@adamiak.biz">adamiak@adamiak.biz</a></p>
+      </div>
+    </div>
+    <p class="mt-3">Adres do doręczeń: skrytka pocztowa 78, 98-220 Zduńska Wola 1</p>
+    <p class="my-0">Kancelaria jest czynna od poniedziałku do piątku w godzinach 8.00 – 16.00</p>
+  </div>
+  </div>
+  <div class="container-lg my-5">
+    <h2 id="map" class="text-center mb-2 pb-2 border-bottom"> Wskazówki dojazdu </h2>
+    <div class="row justify-content-center">
+      <div class="col-sm-12 col-lg-6">
+        <h3 class=>Adres kancelarii</h3>
+        <p class="my-0">Doradca Podatkowy</p>
+        <p class="my-0">Zbigniew Adamiak</p>
+        <p class="my-0">Nr wpisu 00148</p>
+        <p class="my-0">ul. Królewska 19</p>
+        <p class="my-0">98-220 Zduńska Wola</p>
+      </div>
+      <div class="col-sm-12 col-lg-6">
+        <h3>Mapa</h3>
+        <div class="map-responsive">
+          <iframe loading="lazy"
+            src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d2478.1257576028593!2d18.938411115942674!3d51.60258431155988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!3e2!4m0!4m4!1s0x471a5b77d69db8d3%3A0xa973bd54b6b98ce7!3m2!1d51.602581!2d18.940599799999998!5e0!3m2!1spl!2spl!4v1558529277864!5m2!1spl!2spl"
+            width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row justify-content-around align-content-center">
+      <div class="col-3"></div>
+      <div class="col-3">
+        <button class="btn btn-light shadow-sm btn-sm" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#privacyPolicy" aria-controls="privacyPolicy">Polityka Prywatności</button>
+        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="privacyPolicy" aria-labelledby="privacyPolicyLabel">
+          <div class="offcanvas-header">
+            <p class="offcanvas-title" id="privacyPolicyLabel">Polityka Prywatności</p>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body small">
+            zawartość polityki prywatności
+          </div>
+
+        </div>
+      </div>
+      <div class="col-1"></div>
+      <div class="col-3">
+        <button class="btn btn-light shadow-sm btn-sm" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#cookiePolicy" aria-controls="cookiePolicy">Polityka Cookies</button>
+        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="cookiePolicy" aria-labelledby="cookiePolicyLabel">
+          <div class="offcanvas-header">
+            <p class="offcanvas-title" id="cookiePolicyLabel">Polityka Cookies</p>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body small">
+            zawartość polityki cookies
+          </div>
+        </div>
+      </div>
+      <div class="col-2"></div>
+    </div>
+    <footer class="container border-top my-3">
+      <p class="text-center text-muted">&copy; Copyright 2021, Karol Adamiak <a
+          href="mailto:karol.adamiak@adamiak.biz">karol.adamiak@adamiak.biz</a></p>
     </footer>
+    <!--
+      Pixabay images author: https://pixabay.com/pl/users/mohamed_hassan-5229782/
+    -->
   </div>
-  </div>
+  <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
