privacy and cookie policy updated

--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
     <h2 id="home" class="text-center mb-2 pb-2 border-bottom"> Witamy na stronie </h2>
     <div class="row">
 
-      <div class="col-sm-12 col-md-4 mb-2">
-        <h3> Misja </h3>
-        <img src="assets/stressed.png" alt="stressed person" class="img-fluid rounded border shadow my-3">
+      <div class="col-sm-12 col-md-4 mb-2 d-flex flex-column">
+        <div style="height: 3.5em;">
+          <h3> Misja </h3>
+        </div>
+        <img src="assets/stressed.png" alt="stressed person" class="rounded border shadow my-3 align-self-center"
+          style="max-height: 300px; max-width:100%; width: auto; height: auto;">
         <p>Naszą misją jest cywilizowanie postępowania podatkowego, odstresowanie podatników i przekonanie organów
           procesu, iż art. 6 KC nie powinien mieć zastosowania w prawie podatkowym.
           <blockquote class="border-start ps-2 fst-italic"> <span class="fw-bold d-block">Art. 6. [Onus probandi]</span>
@@ -67,16 +70,22 @@
         </p>
 
       </div>
-      <div class="col-sm-12 col-md-4">
-        <h3>Realizowanie usług</h3>
-        <img src="assets/business.png" alt="contract signing" class="img-fluid rounded border shadow my-3">
+      <div class="col-sm-12 col-md-4 mb-2 d-flex flex-column">
+        <div style="height: 3.5em;">
+          <h3>Realizowanie usług</h3>
+        </div>
+        <img src="assets/business.png" alt="contract signing" class="rounded border shadow my-3 align-self-center"
+          style="max-height: 300px; max-width:100%; width: auto; height: auto;">
         <p>Usługi realizowane są w ramach stałych umów lub w przypadku pojedynczych postępowań i kontroli podatkowych.
         </p>
 
       </div>
-      <div class="col-sm-12 col-md-4">
-        <h3>Prowadzenie księgowości</h3>
-        <img src="assets/financial.jpg" alt="financial support" class="img-fluid rounded border shadow my-3">
+      <div class="col-sm-12 col-md-4 mb-2 d-flex flex-column">
+        <div style="height: 3.5em;">
+          <h3>Prowadzenie księgowości</h3>
+        </div>
+        <img src="assets/financial.jpg" alt="financial support" class="rounded border shadow my-3 align-self-center"
+          style="max-height: 300px; max-width:100%; width: auto; height: auto;">
         <p>Kancelaria świadczy również stałe usługi w zakresie prowadzenia ksiąg rachunkowych i podatkowych.</p>
       </div>
     </div>
@@ -84,16 +93,21 @@
   <div class="container-lg my-5">
     <h2 id="about" class="text-center mb-2 pb-2 border-bottom"> O kancelarii </h2>
     <p>Kancelaria ma wieloletnie doświadczenie w pomaganiu Podatnikom podczas sporu z organami podatkowymi. Realizuje
-      swoje usługi w ramach umów stałych lub dotyczących konkretnego postępowania. Obejmują one:</p>
-    <ul>
-      <li>porady, opinie i wyjaśnienia z zakresu obowiązków podatkowych;</li>
-      <li>porady prawne z zakresu prawa pracy;</li>
-      <li>audyt podatkowy;</li>
-      <li>rejestrację działalności gospodarczej, w tym również spółek prawa handlowego;</li>
-      <li>reprezentowanie Podatnika przez wszystkimi organami podatkowymi oraz zastępstwa procesowe;</li>
-      <li>prowadzenie ksiąg rachunkowych i podatkowych;</li>
-      <li>reprezentowanie Podatnika w postępowaniu egzekucyjnym, starając się by było ono jak najmniej dotkliwe;</li>
-      <li>reprezentowanie Podatnika w postępowaniach dotyczących nieujawnionych źródeł dochodu lub nieujawnionych
+      swoje usługi w ramach umów stałych lub dotyczących konkretnego postępowania. </p>
+
+    <h3>Usługi kancelarii</h3>
+    <ul class="list-group my-2">
+      <li class="list-group-item">porady, opinie i wyjaśnienia z zakresu obowiązków podatkowych;</li>
+      <li class="list-group-item">porady prawne z zakresu prawa pracy;</li>
+      <li class="list-group-item">audyt podatkowy;</li>
+      <li class="list-group-item">rejestrację działalności gospodarczej, w tym również spółek prawa handlowego;</li>
+      <li class="list-group-item">reprezentowanie Podatnika przez wszystkimi organami podatkowymi oraz zastępstwa
+        procesowe;</li>
+      <li class="list-group-item">prowadzenie ksiąg rachunkowych i podatkowych;</li>
+      <li class="list-group-item">reprezentowanie Podatnika w postępowaniu egzekucyjnym, starając się by było ono jak
+        najmniej dotkliwe;</li>
+      <li class="list-group-item">reprezentowanie Podatnika w postępowaniach dotyczących nieujawnionych źródeł dochodu
+        lub nieujawnionych
         dochodów w ujawnionych źródłach.</li>
     </ul>
     <p>Kancelaria może zająć się również inną, choćby najbardziej nietypową sprawą. Zachęcamy do kontaktu.</p>
@@ -106,25 +120,28 @@
   </div>
   <div class="container-lg my-5">
     <h2 id="rights" class="text-center mb-2 pb-2 border-bottom"> Poznaj swoje prawa </h2>
-    <p>Czy wiesz, że:</p>
-    <ul>
-      <li>Jeżeli w trakcie postępowania podatkowego (kontroli podatkowej) jesteś wzywany na przesłuchanie w
-        charakterze strony, to możesz nie wyrazić zgody na to przesłuchanie, gdyby przykładowo miało ono pogorszyć
-        Twoją sytuację podatkową?</li>
-      <li>Nie musisz sporządzać jakichkolwiek dodatkowych zestawień w trakcie kontroli? Jeżeli są one potrzebne
-        organowi, to jest on zobowiązany sporządzić je sam na podstawie przedłożonych przez Ciebie dokumentów i
-        ewidencji. Nie daj się zastraszyć groźbą potencjalnej kary pieniężnej.</li>
-      <li>Jeśli z jakichś powodów upłynął termin do złożenia przez Ciebie odwołania od niekorzystnej decyzji
-        podatkowej, to są jeszcze inne instytucje procesowe aby ją uchylić? Przykładem może być stwierdzenie
-        nieważności.</li>
-    </ul>
-    <div class="container my-5 px-10 mx-10">
-      <div class="row justify-content-center">
-        <div class="col-sm-10 col-lg-6">
-          <img src="assets/businessman.png" alt="do you know" class="img-fluid rounded border shadow my-3">
+    <h3>Czy wiesz, że:</h2>
+      <ul class="list-group my-2">
+        <li class="list-group-item">Jeżeli w trakcie postępowania podatkowego (kontroli podatkowej) jesteś wzywany na
+          przesłuchanie w
+          charakterze strony, to możesz nie wyrazić zgody na to przesłuchanie, gdyby przykładowo miało ono pogorszyć
+          Twoją sytuację podatkową?</li>
+        <li class="list-group-item">Nie musisz sporządzać jakichkolwiek dodatkowych zestawień w trakcie kontroli? Jeżeli
+          są one potrzebne
+          organowi, to jest on zobowiązany sporządzić je sam na podstawie przedłożonych przez Ciebie dokumentów i
+          ewidencji. Nie daj się zastraszyć groźbą potencjalnej kary pieniężnej.</li>
+        <li class="list-group-item">Jeśli z jakichś powodów upłynął termin do złożenia przez Ciebie odwołania od
+          niekorzystnej decyzji
+          podatkowej, to są jeszcze inne instytucje procesowe aby ją uchylić? Przykładem może być stwierdzenie
+          nieważności.</li>
+      </ul>
+      <div class="container my-5 px-10 mx-10">
+        <div class="row justify-content-center">
+          <div class="col-sm-10 col-lg-6">
+            <img src="assets/businessman.png" alt="do you know" class="img-fluid rounded border shadow my-3">
+          </div>
         </div>
       </div>
-    </div>
   </div>
   <div class="container-lg my-5">
     <h2 id="contact" class="text-center mb-2 pb-2 border-bottom"> Kontakt </h2>
@@ -165,9 +182,11 @@
       <div class="col-sm-12 col-lg-6">
         <h3>Mapa</h3>
         <div class="map-responsive">
-          <iframe loading="lazy"
-            src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d2478.1257576028593!2d18.938411115942674!3d51.60258431155988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!3e2!4m0!4m4!1s0x471a5b77d69db8d3%3A0xa973bd54b6b98ce7!3m2!1d51.602581!2d18.940599799999998!5e0!3m2!1spl!2spl!4v1558529277864!5m2!1spl!2spl"
-            width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+          <!--<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?marker=51.60298591577308%2C18.940783738762548&amp;bbox=18.939142226845433%2C51.6021371121087%2C18.942425250679666%2C51.60383470357095&amp;layer=mapnik"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=51.60299&amp;mlon=18.94078#map=19/51.60299/18.94078">Wyświetl większą mapę</a></small>
+          -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1169.5189254771437!2d18.93968018769061!3d51.60261014676841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471a5b77d69db8d3%3A0xa973bd54b6b98ce7!2sKr%C3%B3lewska%2019%2C%2098-311%20Zdu%C5%84ska%20Wola!5e0!3m2!1spl!2spl!4v1637481411561!5m2!1spl!2spl"
+            width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </div>
     </div>
@@ -176,7 +195,7 @@
     <div class="row justify-content-around align-content-center">
       <div class="col-3"></div>
       <div class="col-3">
-        <button class="btn btn-light shadow-sm btn-sm" type="button" data-bs-toggle="offcanvas"
+        <button class="btn btn-info shadow btn-sm" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#privacyPolicy" aria-controls="privacyPolicy">Polityka Prywatności</button>
         <div class="offcanvas offcanvas-bottom" tabindex="-1" id="privacyPolicy" aria-labelledby="privacyPolicyLabel">
           <div class="offcanvas-header">
@@ -184,14 +203,42 @@
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body small">
-            zawartość polityki prywatności
+            <ol>
+              <li> Niniejsza Polityka Prywatności określa zasady przetwarzania i ochrony danych osobowych przekazanych
+                przez Użytkowników w związku z korzystaniem przez nich z Serwisu. </li>
+              <li> Administratorem danych osobowych zawartych w serwisie jest
+                ZBIGNIEW ADAMIAK SP. Z O. O., z siedzibą w 98-220, Zduńska Wola, Królewska 19. KRS 0000490518,
+                NIP 8291737524, REGON 101706450.</li>
+              <li>3. W trosce o bezpieczeństwo powierzonych nam danych opracowaliśmy wewnętrzne procedury i zalecenia,
+                które mają zapobiec udostępnieniu danych osobom nieupoważnionym. Kontrolujemy ich wykonywanie i stale
+                sprawdzamy ich zgodność z odpowiednimi aktami prawnymi - ustawą o ochronie danych osobowych, ustawą o
+                świadczeniu usług drogą elektroniczną, a także wszelkiego rodzaju aktach wykonawczych i aktach prawa
+                wspólnotowego.</li>
+              <li>Dane Osobowe przetwarzane są na podstawie zgody wyrażanej przez Użytkownika oraz w przypadkach, w
+                których przepisy prawa upoważniają Administratora do przetwarzania danych osobowych na podstawie
+                przepisów prawa lub w celu realizacji zawartej pomiędzy stronami umowy.</li>
+              <li>Serwis <strong>nie realizuje</strong> w żaden sposób funkcji pozyskiwania informacji o użytkownikach i
+                ich zachowaniach.</li>
+              <li>Dane osobowe pozostawione w serwisie nie zostaną sprzedane ani udostępnione osobom trzecim, zgodnie
+                z przepisami Ustawy o ochronie danych osobowych.</li>
+              <li>Zastrzegamy sobie prawo do zmiany w polityce ochrony prywatności serwisu, na które może wpłynąć
+                rozwój technologii internetowej, ewentualne zmiany prawa w zakresie ochrony danych osobowych oraz rozwój
+                naszego serwisu internetowego. O wszelkich zmianach będziemy informować w sposób widoczny i zrozumiały.
+              </li>
+              <li>W Serwisie mogą pojawiać się linki do innych stron internetowych. Takie strony internetowe
+                działają niezależnie od Serwisu i nie są w żaden sposób nadzorowane przez serwis adamiak.biz. Strony te
+                mogą
+                posiadać własne polityki dotyczące prywatności oraz regulaminy, z którymi zalecamy się zapoznać.</li>
+              <p>W razie wątpliwości co któregokolwiek z zapisów niniejszej polityki prywatności jesteśmy do dyspozycji
+                -
+                nasze dane znaleźć można w zakładce - <em>Kontakt</em>.</p>
+            </ol>
           </div>
-
         </div>
       </div>
       <div class="col-1"></div>
       <div class="col-3">
-        <button class="btn btn-light shadow-sm btn-sm" type="button" data-bs-toggle="offcanvas"
+        <button class="btn btn-info shadow btn-sm" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#cookiePolicy" aria-controls="cookiePolicy">Polityka Cookies</button>
         <div class="offcanvas offcanvas-bottom" tabindex="-1" id="cookiePolicy" aria-labelledby="cookiePolicyLabel">
           <div class="offcanvas-header">
@@ -199,7 +246,22 @@
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body small">
-            zawartość polityki cookies
+            <ol>
+              <li>Serwis <strong>nie zbiera</strong> żadnych danych, włączając w to pliki cookies.</li>
+              <li>Pliki (cookies) są plikami tekstowymi, które przechowywane są w urządzeniu końcowym użytkownika
+                serwisu. Przeznaczone są do korzystania ze stron serwisu. Przede wszystkim zawierają nazwę strony
+                internetowej swojego pochodzenia, swój unikalny numer, czas przechowywania na urządzeniu końcowym.</li>
+              <li>Serwisu <strong>nie wykorzystuje</strong> plików cookies. </li>
+              <li>Użytkownik może w każdej chwili dokonać zmiany ustawień swojej przeglądarki, aby zablokować obsługę
+                plików (cookies) lub każdorazowo uzyskiwać informacje o ich umieszczeniu w swoim urządzeniu. Inne
+                dostępne opcje można sprawdzić w ustawieniach swojej przeglądarki internetowej. Należy pamiętać, że
+                większość przeglądarek domyślnie jest ustawione na akceptację zapisu plików (cookies)w urządzeniu
+                końcowym.</li>
+              <li>Informacje dotyczące ustawień przeglądarek internetowych dostępne są w jej menu (pomoc) lub na stronie
+                jej producenta.</li>
+              <li>Bardziej szczegółowe informacje na temat plików (cookies) dostępne są na stronie ciasteczka.org.pl
+              </li>
+            </ol>
           </div>
         </div>
       </div>
