--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <li> Administratorem danych osobowych zawartych w serwisie jest
                 ZBIGNIEW ADAMIAK SP. Z O. O., z siedzibą w 98-220, Zduńska Wola, Królewska 19. KRS 0000490518,
                 NIP 8291737524, REGON 101706450.</li>
-              <li>3. W trosce o bezpieczeństwo powierzonych nam danych opracowaliśmy wewnętrzne procedury i zalecenia,
+              <li>W trosce o bezpieczeństwo powierzonych nam danych opracowaliśmy wewnętrzne procedury i zalecenia,
                 które mają zapobiec udostępnieniu danych osobom nieupoważnionym. Kontrolujemy ich wykonywanie i stale
                 sprawdzamy ich zgodność z odpowiednimi aktami prawnymi - ustawą o ochronie danych osobowych, ustawą o
                 świadczeniu usług drogą elektroniczną, a także wszelkiego rodzaju aktach wykonawczych i aktach prawa
