--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse justify-content-start align-center" id="main-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="#home">Strona główna</a>
+            <a class="nav-link" href="#home">Strona główna</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">O kancelarii</a>
